Sun Mar 29 21:08:37 2015  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* gc.c (objspace_allrefs_destruct_i): fix a typo.
	  [Bug #11013]

Sun Mar 29 11:51:32 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* proc.c (proc_binding): replicate env from method object, and
	  allocate the local variable area for the iseq local table.
	  [ruby-core:68673] [Bug #11012]

Sat Mar 28 09:19:41 2015  NARUSE, Yui  <naruse@ruby-lang.org>

	* ext/date/extconf.rb: try_cflags("-std=iso9899:1999") [Bug #10906]
	  ruby itself (including numeric.c) is built with strict compile
	  options including -std=iso9899:1999, but ext/date is not.
	  By the way -std=iso9899:1999 is not only a warning option but also
	  changes behavior like MACRO definitions for example INFINITY.
	  gcc on Solaris affect this.

Fri Mar 27 16:34:16 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* common.mk: revert using BOOTSTRAPRUBY for enc.mk, as
	  enc/depend uses CONFIG.  [ruby-core:68647] [Bug #11004]

Thu Mar 26 10:05:13 2015  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* test/test_observer.rb: add tests for Observable module.
	  [fix GH-859] Patch by @brightbits

Thu Mar 26 06:35:10 2015  Eric Wong  <e@80x24.org>

	* README.EXT: add redirect [ruby-core:68631]

Wed Mar 25 16:46:49 2015  NARUSE, Yui  <naruse@ruby-lang.org>

	* ext/socket/extconf.rb: Solaris 11 has struct tcp_info.tcpi_ca_state,
	  but it is a dummy.

	* ext/socket/option.c: Solaris 11 doesn't have u_intN_t.

	* ext/socket/option.c: Solaris 11 needs inspect_tcpi_msec.

	* ext/socket/raddrinfo.c: Solaris 11 has AF_PACKET but doesn't have
	  related macros.

Wed Mar 25 17:03:08 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/-test-/file/fs.c (get_fsname): try magic number only if
	  f_type is included.  [ruby-dev:48913] [Bug #11000]

Wed Mar 25 11:20:40 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* benchmark/bm_hash_aref_flo.rb: make more realistic data.
	  [ruby-core:68632] [[Bug #10999]
