@@ -1,3 +1,9 @@
+Mon Mar 30 11:27:54 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* io.c (copy_stream_body): use the arguments without conversion if
+	  having read, readpartial, and write methods, than conversion by
+	  to_path method.  [ruby-core:68676] [Bug #11015]
+
 Sun Mar 29 21:08:37 2015  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>
 
 	* gc.c (objspace_allrefs_destruct_i): fix a typo.
